--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="login">
             <label for="nombre">Nombre de usuario:</label>
-            <input name="nombre" id="nickUsuario">
+            <input name="nombre" id="nickUsuario"><br/>
             
             <label for="estado">Estado:</label>
             <input name="estado" id="estadoUsuario"><br/>
